--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
-    "gatsby": "^2.22.17",
-    "gatsby-plugin-fontawesome-css": "^1.0.0"
+    "gatsby": "^2.22.20",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
