--- a/example/package.json
+++ b/example/package.json
@@ -1,19 +1,25 @@
 {
+  "name": "gatsby-plugin-fontawesome-css-example",
+  "version": "1.0.0",
+  "private": true,
+  "description": "gatsby-plugin-fontawesome-css-example",
+  "author": "Johnny Zabala",
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
     "develop": "gatsby develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
-  "keywords": [],
-  "author": "Johnny Zabala <jzabala.s@gmail.com>",
-  "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.10",
-    "gatsby": "^2.22.20",
-    "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "gatsby": "^3.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
