--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   ],
   "peerDependencies": {
     "gatsby": "^4.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0 || ^6.1.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.0 || ^6.0.0"
   },
   "author": "Johnny Zabala <jzabala.s@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0 || ^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "react": "^16.13.1"
