--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-plugin-fontawesome-css",
+  "name": "gatsby-plugin-fontawesome",
   "version": "1.3.0",
   "description": "Gatsby plugin that disables Font Awesome auto CSS insertion and instead inserts it at compile time.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jzabala/gatsby-plugin-fontawesome-css.git"
+    "url": "https://github.com/luis199230/gatsby-plugin-fontawesome.git"
   },
   "scripts": {
     "test": "jest",
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0"
   },
   "author": "Johnny Zabala <jzabala.s@gmail.com>",
+  "contributors": ["Luis Benavides <luis1992_30@hotmail.com>"],
   "license": "MIT",
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
